chore: code cleanup and enhancements